# fiona

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
benches/: CMakeLists.txt  echo.cpp
benches/echo/: asio.cpp  common.hpp  echo.cpp  fiona.cpp
benches/post/: asio.cpp  common.hpp  fiona.cpp  post.cpp
benches/recv/: asio.cpp  common.hpp  fiona.cpp  recv.cpp
benches/timer/: asio.cpp  common.hpp  fiona.cpp  timer.cpp
cmake/: Findliburing.cmake  FionaTest.cmake  fiona-config.cmake.in
include/fiona/: borrowed_buffer.hpp  buffer.hpp  dns.hpp  error.hpp  executor.hpp  file.hpp  io_context.hpp  ip.hpp  params.hpp  sleep.hpp  task.hpp  tcp.hpp  tcpv2.hpp  time.hpp  tls.hpp
include/fiona/detail/: awaitable_base.hpp  common.hpp  config.hpp  get_sqe.hpp  time.hpp
overlays/boost-buffers/: portfile.cmake  vcpkg.json
overlays/boost-http-proto/: Jamroot.jam.in  portfile.cmake  vcpkg.json
overlays/liburing/: vcpkg.json
src/: awaitable_base.cpp  awaitable_base.hpp  buffer.cpp  buffers_adapter.cpp  buffers_adapter.hpp  buffers_adaptor.cpp  buffers_adaptor.hpp  common.cpp  dns.cpp  file.cpp  io_context.cpp  ip.cpp  stream_impl.hpp  tcp.cpp  tcpv2.cpp  time.cpp  tls.cpp
src/detail/: awaitable_base.hpp  buffers_adaptor.hpp  stream_impl.hpp
src/tls/: tls.cpp
test/: CMakeLists.txt  buffer_test.cpp  dns_test.cpp  file_test.cpp  helpers.hpp  ipv6_test.cpp  post_test.cpp  recv_test.cpp  tcp2_test.cpp  tcp_test.cpp  timer.cpp  timer_test.cpp  tls_test.cpp  waker_test.cpp
test/cmake_subdir_test/: CMakeLists.txt  main.cpp  vcpkg.json
test/self_includes/: borrowed_buffer.cpp  error.cpp  io_context.cpp  sleep.cpp  task.cpp  tcp.cpp  time.cpp
test/tls/: tls_test.cpp
test/tls/botan/: ca.crt.pem  ca.key.pem  server.crt.pem  server.csr  server.key.pem
